[workspace]
members = [
    "crates/loro",
    "crates/examples",
    "crates/bench-utils",
    "crates/rle",
    "crates/loro-common",
    "crates/loro-internal",
    "crates/loro-wasm",
    "crates/fuzz",
    "crates/fractional_index",
    "crates/dev-utils",
    "crates/delta",
]
resolver = "2"

[workspace.dependencies]
enum_dispatch = "0.3.11"
enum-as-inner = "0.5.1"
fxhash = "0.2.1"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
serde_columnar = { version = "0.3.5" }
serde_json = "1.0"
smallvec = { version = "1.8.0", features = ["serde"] }
itertools = "0.12.1"
serde = "1"
