[workspace]
members = [
    "crates/loro",
    "crates/examples",
    "crates/bench-utils",
    "crates/rle",
    "crates/loro-common",
    "crates/loro-internal",
    "crates/loro-wasm",
    "crates/fuzz",
    "crates/fractional_index",
    "crates/dev-utils",
    "crates/delta",
    "crates/kv-store",
]
resolver = "2"

[workspace.dependencies]
enum_dispatch = "0.3.11"
enum-as-inner = "0.6.0"
fxhash = "0.2.1"
tracing = { version = "0.1" }
serde_columnar = { version = "0.3.12" }
serde_json = "1.0"
thiserror = "1"
smallvec = { version = "1.8.0", features = ["serde"] }
itertools = "0.12.1"
serde = "1"
bytes = "1"
once_cell = "1.18.0"
xxhash-rust = { version = "0.8.12", features = ["xxh32"] }
ensure-cov = "0.1.0"
either = "1.13.0"
