[package]
name = "append-only-bytes"
version = "0.1.12"
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/zxch3n/append-only-bytes"
description = "Shareable append-only bytes"
repository = "https://github.com/zxch3n/append-only-bytes"
authors = ["zxch3n <remch183@outlook.com>"]
keywords = ["bytes", "append-only"]
include = ["Cargo.toml", "**/*.rs"]
documentation = "https://docs.rs/append-only-bytes"

[features]
u32_range = []
default = []

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
postcard = { version = "1.0.4", features = ["alloc"] }
serde_json = "1.0.100"
