[package]
name = "bench-utils"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.2.0", features = ["derive"] }
loro-common = { path = "../loro-common" }
enum-as-inner = "0.5.1"
flate2 = "1.0.25"
rand = "0.8.5"
serde_json = "1.0.89"
