[package]
name = "compact-bytes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
append-only-bytes = "0.1.8"
fxhash = "0.2.1"
linked-hash-map = "0.5.6"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
