[package]
name = "compact-bytes"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
append-only-bytes = "0.1.11"
fxhash = "0.2.1"
linked-hash-map = "0.5.6"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3
