[package]
name = "dev-utils"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3.18"
tracing-chrome = "0.7.1"
rand = { version = "0.8.5" }
tracing = "0.1.40"
color-backtrace = "0.6"
chrono = "0.4.35"
tracing-tree = "0.3"
