[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bench-utils = { path = "../bench-utils" }
loro = { path = "../loro" }
tabled = "0.15.0"
arbitrary = { version = "1.3.0", features = ["derive"] }
serde_json = "1.0.111"
tracing = "0.1.40"

[dev-dependencies]
flate2 = "1.0"
color-backtrace = { version = "0.6" }
ctor = "0.2"
