[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
bench-utils = { path = "../bench-utils" }
loro = { path = "../loro" }
tabled = "0.15.0"
arbitrary = { version = "1.3.0", features = ["derive"] }
serde_json = { workspace = true }
tracing = "0.1.40"
criterion = "0.4.0"

[dev-dependencies]
flate2 = "1.0"
color-backtrace = { version = "0.6" }
ctor = "0.2"

[[bench]]
name = "list"
harness = false
