[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bench-utils = { path = "../bench-utils" }
dev-utils = { path = "../dev-utils" }
loro = { path = "../loro", features = ["counter"] }
arbitrary = { version = "1.3.0", features = ["derive"] }
serde_json = { workspace = true }
tracing = "0.1.40"
rand = "0.8.5"
zstd = "0.13.2"
ensure-cov = { workspace = true }
base64 = "0.22.1"

[dev-dependencies]
tabled = "0.15.0"
criterion = "0.4.0"
flate2 = "1.0"
color-backtrace = { version = "0.6" }
ctor = "0.2"

[[bench]]
name = "list"
harness = false

[[bench]]
name = "bench_text"
harness = false

[[bench]]
name = "fork"
harness = false

[profile.bench]
debug = true
