[package]
name = "loro_fractional_index"
version = "0.16.2"
edition = "2021"
license = "MIT"
description = "Fraction index for Loro. Fork and modified from jamsocket/fractional_index"
repository = "https://github.com/loro-dev/loro/"
authors = ["Liang Zhao", "Zixuan Chen"]
categories = ["crdt", "collaborative-editing", "local-first"]
keywords = ["crdt", "local-first"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imbl = "^3.0"
smallvec = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"], optional = true }
rand = { version = "^0.8" }
once_cell = { workspace = true }

[dev-dependencies]
fraction_index = { version = "^2.0", package = "fractional_index" }
criterion = "^0.5.0"


[[bench]]
name = "fractional_index"
harness = false
