[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loro = { path = "../loro", features = ["counter"], package = "loro" }
loro-without-counter = { git = "https://github.com/loro-dev/loro.git", rev = "f73d4587e4789fb04e24ab377a64e57ae92f61f7", package = "loro", default-features = false }
fxhash = { workspace = true }
enum_dispatch = { workspace = true }
enum-as-inner = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
arbitrary = "1"
tabled = "0.10"
rand = "0.8.5"
serde_json = "1"

[dev-dependencies]
ctor = "0.2"
arbtest = "^0.2.0"
dev-utils = { path = "../dev-utils" }
tracing-subscriber = "0.3.18"
tracing-chrome = "0.7.1"
color-backtrace = "0.6.1"
serde_json = "1"
