[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loro = { path = "../loro", features = ["counter"], package = "loro" }
loro-without-counter = { git = "https://github.com/loro-dev/loro.git", rev = "90470658435ec4c62b5af59ebb82fe9e1f5aa761", package = "loro", default-features = false }
loro-016 = { git = "https://github.com/loro-dev/loro.git", tag="loro-crdt@0.16.7", package = "loro"  }
fxhash = { workspace = true }
enum_dispatch = { workspace = true }
enum-as-inner = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
arbitrary = "1"
tabled = "0.10"
rand = "0.8.5"
serde_json = "1"
num_cpus = "1.16.0"
rayon = "1.10.0"
bytes = "1"
ensure-cov = { workspace = true }
pretty_assertions = "1.4.0"

[dev-dependencies]
ctor = "0.2"
arbtest = "^0.2.0"
dev-utils = { path = "../dev-utils" }
tracing-subscriber = "0.3.18"
tracing-chrome = "0.7.1"
color-backtrace = "0.6.1"
serde_json = "1"
