[package]
name = "json-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loro-common = { path = "../loro-common" }
fractional_index = { path = "../fractional_index", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }

[features]
counter = ["loro-common/counter"]
