[package]
name = "loro-kv-store"
version = "1.3.1"
edition = "2021"
license = "MIT"
description = "Key-value store component for Loro, a high-performance CRDTs framework"
homepage = "https://loro.dev"
repository = "https://github.com/loro-dev/loro/"
authors = ["Liang Zhao", "Zixuan Chen"]


[dependencies]
loro-common = { path = "../loro-common", version = "1.3.1" }
bytes = { workspace = true }
fxhash = { workspace = true }
once_cell = { workspace = true }
lz4_flex = { version = "0.11" }
quick_cache = "0.6.2"
xxhash-rust = { workspace = true }
ensure-cov = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
ctor = "0.2"
dev-utils = { path = "../dev-utils" }
