[package]
name = "loro-kv-store"
version = "1.5.10"
edition = "2021"
license = "MIT"
description = "Key-value store component for Loro, a high-performance CRDTs framework"
homepage = "https://loro.dev"
repository = "https://github.com/loro-dev/loro/"
authors = ["Liang Zhao", "Zixuan Chen"]


[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
quick_cache = { version = "0.6.2", default-features = false }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
quick_cache = { version = "0.6.2" }

[dependencies]
loro-common = { path = "../loro-common", version = "1.5.10" }
bytes = { workspace = true }
fxhash = { workspace = true }
once_cell = { workspace = true }
lz4_flex = { version = "0.11" }
xxhash-rust = { workspace = true }
ensure-cov = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
ctor = "0.2"
dev-utils = { path = "../dev-utils" }
