[package]
name = "loro-common"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Common types and functions for Loro. This is an internal lib of Loro."
documentation = "https://docs.rs/loro/"
homepage = "https://loro.dev"
authors = ["Zixuan Chen", "Liang Zhao"]
categories = ["data-structures", "crdt", "collaborative-editing", "local-first"]
keywords = ["crdt", "local-first"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.43"
rle = { path = "../rle", version = "0.4.0", package = "loro-rle" }
wasm-bindgen = { version = "=0.2.90", optional = true }
fxhash = "0.2.1"
enum-as-inner = "0.6.0"
string_cache = "0.8"
arbitrary = { version = "1.3.0", features = ["derive"] }
js-sys = { version = "0.3.60", optional = true }
serde_columnar = { workspace = true }
nonmax = "0.5.5"

[features]
wasm = ["wasm-bindgen", "js-sys"]
