[package]
name = "loro-common"
version = "0.16.10"
edition = "2021"
license = "MIT"
description = "Common types and functions for Loro. This is an internal lib of Loro."
documentation = "https://docs.rs/loro/"
homepage = "https://loro.dev"
repository = "https://github.com/loro-dev/loro"
authors = ["Zixuan Chen", "Liang Zhao"]
categories = []
keywords = ["crdt", "local-first"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rle = { path = "../rle", version = "0.16.10", package = "loro-rle" }
serde = { workspace = true }
thiserror = "1.0.43"
wasm-bindgen = { version = "=0.2.92", optional = true }
fxhash = "0.2.1"
enum-as-inner = "0.6.0"
string_cache = "0.8"
arbitrary = { version = "1.3.0", features = ["derive"] }
js-sys = { version = "0.3.60", optional = true }
serde_columnar = { workspace = true }
nonmax = "0.5.5"

[features]
wasm = ["wasm-bindgen", "js-sys"]
counter = []
