[package]
name = "loro-common"
version = "1.5.10"
edition = "2021"
license = "MIT"
description = "Common types and functions for Loro. This is an internal lib of Loro."
documentation = "https://docs.rs/loro/"
homepage = "https://loro.dev"
repository = "https://github.com/loro-dev/loro"
authors = ["Zixuan Chen", "Liang Zhao"]
categories = []
keywords = ["crdt", "local-first"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rle = { path = "../rle", version = "1.2.7", package = "loro-rle" }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = "1.0.43"
wasm-bindgen = { version = "=0.2.100", optional = true }
fxhash = "0.2.1"
enum-as-inner = "0.6.0"
arbitrary = { version = "1.3.0", features = ["derive"] }
js-sys = { version = "0.3.60", optional = true }
serde_columnar = { workspace = true }
nonmax = "0.5.5"
leb128 = "0.2.5"
tracing = { workspace = true, optional =  true}

[features]
wasm = ["wasm-bindgen", "js-sys"]
logging = ["tracing"]
counter = []
