[package]
name = "loro-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string_cache = "0.8.3"
rle = {path = "../rle"}
smallvec = "1.8.0"
smartstring = "1.0.1"
fxhash = "0.2.1"
ring = "0.16.20"
moveit = "0.5.0"
pin-project = "1.0.10"
