[package]
name = "loro-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string_cache = "0.8.3"
rle = { path = "../rle" }
smallvec = "1.8.0"
smartstring = "1.0.1"
fxhash = "0.2.1"
ring = "0.16.20"
pin-project = "1.0.10"
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.31"
im = "15.1.0"
enum-as-inner = "0.5.1"
num = "0.4.0"
crdt-list = { version = "0.2.1", path = "../../../crdt-list" }
owning_ref = "0.4.1"
rand = { version = "0.8.5", optional = true }
arbitrary = { version = "1.1.7", optional = true }
tabled = { version = "0.10.0", optional = true }
colored = "2.0.0"

[dev-dependencies]
rand = { version = "0.8.5" }
proptest = "1.0.0"
proptest-derive = "0.3.0"
static_assertions = "1.1.0"
tabled = "0.10.0"
color-backtrace = { version = "0.5" }
ctor = "0.1.23"

# See https://matklad.github.io/2021/02/27/delete-cargo-integration-tests.html
[lib]
doctest = false

[features]
fuzzing = ["crdt-list/fuzzing", "rand", "arbitrary", "tabled"]
