[package]
name = "loro-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string_cache = "0.8.3"
rle = { path = "../rle" }
smallvec = "1.8.0"
smartstring = "1.0.1"
fxhash = "0.2.1"
ring = "0.16.20"
pin-project = "1.0.10"
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.31"
im = "15.1.0"
enum-as-inner = "0.5.1"
num = "0.4.0"
crdt-list = { version = "0.3.0" }
owning_ref = "0.4.1"
rand = { version = "0.8.5", optional = true }
arbitrary = { version = "1.1.7", optional = true }
tabled = { version = "0.10.0", optional = true }
colored = "2.0.0"
bit-vec = "0.6.3"
wasm-bindgen = { version = "0.2.83", optional = true }
js-sys = { version = "0.3.60", optional = true }
serde_json = { version = "1.0.87", optional = true }
columnar = { git="https://github.com/loro-dev/columnar.git" }

[dev-dependencies]
serde_json = "1.0.87"
dhat = "0.3.1"
rand = { version = "0.8.5" }
proptest = "1.0.0"
proptest-derive = "0.3.0"
static_assertions = "1.1.0"
tabled = "0.10.0"
color-backtrace = { version = "0.5" }
ctor = "0.1.23"
criterion = "0.4.0"
flate2 = "1.0.24"
arbtest = "0.2.0"


# See https://matklad.github.io/2021/02/27/delete-cargo-integration-tests.html
[lib]
doctest = false

[features]
wasm = ["wasm-bindgen", "js-sys"]
json = ["serde_json"]
# whether to use list slice instead of raw str in text container
test_utils = ["crdt-list/fuzzing", "rand", "arbitrary", "tabled", "json"]

[[bench]]
name = "text"
harness = false

[[bench]]
name = "encode"
harness = false