[package]
name = "loro-ffi"
version = "1.4.6"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loro = { path = "../loro", features = ["counter", "jsonpath"] }
serde_json = { workspace = true }
