[package]
name = "loro-ffi"
version = "1.5.8"
edition = "2021"
description = "FFI bindings for Loro"
authors = ["Liang Zhao", "Zixuan Chen"]
license = "MIT"
homepage = "https://loro.dev"
repository = "https://github.com/loro-dev/loro"
keywords = ["crdt", "local-first"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loro = { path = "../loro", features = [
    "counter",
    "jsonpath",
], version = "1.5.8" }
serde_json = { workspace = true }
