[package]
name = "loro-internal"
version = "0.16.12"
edition = "2021"
license = "MIT"
description = "Loro internal library. Do not use it directly as it's not stable."
documentation = "https://docs.rs/loro/"
homepage = "https://loro.dev"
repository = "https://github.com/loro-dev/loro/"
authors = ["Zixuan Chen", "Liang Zhao"]
categories = []
keywords = ["crdt", "local-first"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = { workspace = true }
loro-delta = { path = "../delta", version = "0.16.12", package = "loro-delta" }
rle = { path = "../rle", version = "0.16.12", package = "loro-rle" }
loro-common = { path = "../loro-common", version = "0.16.12" }
fractional_index = { path = "../fractional_index", features = [
  "serde",
], version = "0.16.12", package = "loro_fractional_index" }
postcard = "1"
fxhash = { workspace = true }
serde = { workspace = true }
thiserror = "1"
enum-as-inner = { workspace = true }
num = "0.4.0"
rand = { version = "0.8.5" }
arbitrary = { version = "1", optional = true }
tabled = { version = "0.10.0", optional = true }
wasm-bindgen = { version = "=0.2.92", optional = true }
serde-wasm-bindgen = { version = "0.5.0", optional = true }
js-sys = { version = "0.3.60", optional = true }
serde_json = { workspace = true }
arref = "0.1.0"
serde_columnar = { workspace = true }
append-only-bytes = { version = "0.1.12", features = ["u32_range"] }
itertools = { workspace = true }
enum_dispatch = { workspace = true }
im = "15.1.0"
generic-btree = { version = "^0.10.5" }
getrandom = "0.2.15"
once_cell = "1.18.0"
leb128 = "0.2.5"
num-traits = "0.2"
num-derive = "0.3"
either = "1"
md5 = "0.7.0"
tracing = { version = "0.1", features = ["release_max_level_warn"] }

[dev-dependencies]
miniz_oxide = "0.7.1"
dhat = "0.3.1"
rand = { version = "0.8.5" }
base64 = "0.21.5"
proptest = "1.0.0"
proptest-derive = "0.3.0"
static_assertions = "1.1.0"
tabled = "0.10.0"
ctor = "0.1.23"
criterion = "0.5.0"
arbtest = "0.2.0"
bench-utils = { path = "../bench-utils" }
dev-utils = { path = "../dev-utils" }
zstd = "0.13.0"

# See https://matklad.github.io/2021/02/27/delete-cargo-integration-tests.html
[lib]
doctest = false
bench = false

[features]
# "wasm" will use utf-16 index by default when using text related stuff; But it'll use utf-8 encoding internally.
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen", "loro-common/wasm"]
# whether to use list slice instead of raw str in text container
test_utils = ["arbitrary", "tabled"]
# whether enable the counter container
counter = ["loro-common/counter"]

[[bench]]
name = "text_r"
harness = false

[[bench]]
name = "list"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "pending"
harness = false

[[bench]]
name = "event"
harness = false

[[bench]]
name = "map"
harness = false

[[bench]]
name = "tree"
harness = false
