[package]
name = "loro-internal"
version = "1.10.3"
edition = "2021"
license = "MIT"
description = "Loro internal library. Do not use it directly as it's not stable."
documentation = "https://docs.rs/loro/"
homepage = "https://loro.dev"
repository = "https://github.com/loro-dev/loro/"
authors = ["Zixuan Chen", "Liang Zhao"]
categories = []
keywords = ["crdt", "local-first"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loro = { path = "../loro", version = "1.10.3" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[target.'cfg(all(target_arch = "wasm32", not(features = "wasm")))'.dependencies]
wasm-bindgen = "0.2.100"

[dev-dependencies]
arbitrary = { version = "1" }
miniz_oxide = "0.7.1"
rand = { version = "0.8.5" }
tabled = "0.10.0"
ctor = "0.1.23"
loro-common = { path = "../loro-common", version = "1.10.0" }
loro-delta = { path = "../delta", version = "1.9.1", package = "loro-delta" }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
xxhash-rust = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
bench-utils = { path = "../bench-utils" }
dev-utils = { path = "../dev-utils" }
zstd = "0.13.0"
criterion = { version = "0.7.0", features = ["html_reports"] }

# See https://matklad.github.io/2021/02/27/delete-cargo-integration-tests.html
[lib]
doctest = false
bench = false

[features]
wasm = ["loro/wasm"]
test_utils = ["loro/test_utils"]
counter = ["loro/counter"]
logging = ["loro/logging"]
jsonpath = ["loro/jsonpath"]

[[bench]]
name = "text_r"
harness = false

[[bench]]
name = "list"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "pending"
harness = false

[[bench]]
name = "event"
harness = false

[[bench]]
name = "map"
harness = false

[[bench]]
name = "tree"
harness = false

[[bench]]
name = "jsonpath"
harness = false
