[package]
edition = "2021"
name = "loro-nodejs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
loro-internal = { path = "../loro-internal" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.14", default-features = false, features = ["napi4"] }
napi-derive = "2.10.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
