[package]
name = "loro-preload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.171", features=["derive"]}
serde_columnar = "0.2.5"
loro-common = {path="../loro-common"}
bytes = "1.4.0"
