[package]
name = "loro-preload"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1", features=["derive"]}
serde_columnar = { version = "0.3.2" }
loro-common = {path="../loro-common"}
bytes = "1.4.0"
