[package]
name = "loro-preload"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Loro internal lib for loading data"
documentation = "https://docs.rs/loro/"
homepage = "https://loro.dev"
authors = ["Zixuan Chen", "Liang Zhao"]
categories = ["data-structures", "crdt", "collaborative-editing", "local-first"]
keywords = ["crdt", "local-first"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_columnar = { workspace = true }
loro-common = { path = "../loro-common", version = "0.4.0" }
bytes = "1.4.0"
