[package]
name = "loro-wasm"
version = "1.3.1"
edition = "2021"
publish = false
repository = "https://github.com/loro-dev/loro/"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.release]
release = false

[dependencies]
js-sys = "0.3.60"
loro-internal = { path = "../loro-internal", features = [
    "wasm",
    "counter",
    "jsonpath",
] }
loro-common = { path = "../loro-common" }
loro-delta = { path = "../delta" }
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = { version = "^0.6.5" }
wasm-bindgen-derive = "0.2.1"
console_error_panic_hook = { version = "0.1.6" }
getrandom = { version = "0.2.15", features = ["js"] }
serde = { workspace = true }
rle = { path = "../rle", package = "loro-rle" }
tracing-wasm = "0.2.1"
tracing = { version = "0.1", features = ["release_max_level_warn"] }
serde_json = "1"
smallvec = "1.11.2"
arrayvec = "0.7.4"
parking_lot = "0.12.5"

[features]
default = []
